# daqmx-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: ai_channels.rs  error.rs  lib.rs  task.rs  types.rs
src/channels/: ai_channels.rs  mod.rs  properties.rs
src/channels/ai_channels/: mod.rs  resistance.rs  voltage.rs
src/channels/ai_channels/current/: current_dc.rs  mod.rs
src/channels/ai_channels/temperature/: mod.rs  rtd.rs  thermocouple.rs
src/scales/: mod.rs
src/tasks/: ai_task.rs  input.rs  mod.rs  task.rs
tests/: README.md  analog_input_test.rs  multithread_test.rs
